# gpmf-sync

./: .gitignore  CHANGELOG.md  README.md  build.py  conftest.py  entry.py  pyproject.toml
.github/workflows/: lint.yml  release.yml
scripts/: build-preview.py
src/gmpf_sync/: __init__.py  __main__.py  cli.py  gpmf_track.py  gui.py  mp4_meta.py  rc_csv.py  sync.py  timestamps.py
src/gmpf_sync/mp4/: atoms.py  gpmf.py  gpmf_track.py  meta.py  timestamps.py
tests/: test_samples.py  test_sync.py
