[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmpf-sync"
version = "1.0.0"
description = "Extract creation timestamps from GoPro MP4 files via streaming atom parsing"
requires-python = ">=3.10"
authors = [{ name = "Alberto WD", email = "alberto@albertowd.dev" }]
dependencies = [
    "tkinterdnd2>=0.4.0",
]

[project.scripts]
gmpf-sync = "gmpf_sync.cli:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.0", "pillow>=10.0"]
dev = ["pylint>=3.0", "pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/gmpf_sync"]

[tool.pylint.main]
# `src/` is added to sys.path via conftest.py for tests; pylint needs an
# equivalent hint to resolve intra-package imports when run from project root.
init-hook = "import sys; sys.path.insert(0, 'src')"
# Refusing to score below 9.5 keeps drift visible without forcing churn.
fail-under = 9.5
jobs = 0  # auto-detect CPU count

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
# Short loop/struct names common in binary-format parsing code.
good-names = ["f", "i", "j", "k", "n", "m", "s", "t", "x", "y", "z", "dt", "tz", "im", "ex", "_"]

[tool.pylint.design]
# Raised from defaults so the metrics still flag truly excessive cases
# (rather than firing on the GUI App or binary-format parsers, which
# legitimately exceed the conservative defaults).
max-attributes = 15        # default 7  — Tk SyncApp + dataclasses
max-locals = 20            # default 15 — GUI builders, sample-table reader
max-branches = 15          # default 12 — gpmf_track sample reader
max-returns = 10           # default 6  — sync.read_first_timestamp dispatch
min-public-methods = 1     # default 2  — dataclasses + Tk app entry point

[tool.pylint."messages control"]
# Inline `# pylint: disable=...` comments cover the few sites that
# legitimately need an exception; everything else is fixed in code or
# absorbed by the raised thresholds above. Only categories that are
# consistently noisy across the codebase live here:
#   - The dataclass-heavy modules don't benefit from boilerplate
#     class/function docstrings beyond the existing module-level ones.
#   - Spec-driven sentinel comparisons (e.g. ``size32 == 0`` for the MP4
#     "extends to EOF" marker, paired with ``size32 == 1``) read more
#     clearly than ``not size32``.
#   - duplicate-code triggers on near-identical small parsers; abstracting
#     them would obscure the spec-to-code mapping.
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "use-implicit-booleaness-not-comparison-to-zero",
    "duplicate-code",
]
